# SoftwareProject

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  a.py  db.sqlite3  docker-compose.yml  entrypoint.sh  histogram.py  lol.txt  manage.py  navar-to-fix.md  navbar.md  porject.md  project.md  proyecto.md  pyproject.toml  refractor-register.md  requirements.txt
.github/: quality_control_data.json
.github/ISSUE_TEMPLATE/: issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: commitlint.config.js  commitlint.config.mjs  depth_conditional_nesting.py  generate_qc_report.js  release-please-config.json
.github/workflows/: conditional-nesting.yml  deploy.yml  django.yml  histogram.yml  issues_histogram.yml  pareto.yml  pr-quality-gate.yml  quality-control-aggregator.yml  realease-please.yml  runchart.yml  test.yml
IshikawaTools/: chart.py  histogram.py  runchart.py  runchart_prova.py
SoftwareProject/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  urls.py  views.py
app/: admin.py  apps.py  models.py  services.py  tech_admin.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_profile_role.py  0002_user_onboarding_completed_alter_agerating_id_and_more.py  0003_alter_profile_role_alter_profile_user.py  0003_delete_userplatform.py  0004_user_gender.py  0005_user_favorite_genres.py
app/templates/: catalog.html  home.html  login.html  main.html  register.html  streamsync_register.html  user_home.html
meeting_files/: codebundle.md  to_do_list.md
templates/app/: home.html
(+34 files in other folders)
